--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
            <artifactId>joda-time</artifactId>
            <version>2.10.10</version>
        </dependency>
+       <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+       <dependency>
+           <groupId>org.apache.httpcomponents</groupId>
+           <artifactId>httpclient</artifactId>
+           <version>4.5.13</version>
+       </dependency>
+
 
 
    </dependencies>
