Hi Pavel, is version 0.0009

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.txt
 src/main/resources/*.txt
 /WhaleNamesByHash.java
+src/main/resources/whales/whaleNames.txt
 /src/main/java/WhaleNamesByHash.java
+/src/main/java/UpdateProfile.java
