Hi Pavel, is version 0.0009

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ src/main/resources/*.txt
 src/main/resources/whales/whaleNames.txt
 /src/main/java/WhaleNamesByHash.java
 /src/main/java/UpdateProfile.java
+target/classes/WhaleNamesByHash.class
