--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -1,8 +1,8 @@
-WhaleBefore   = Whale on the march
+WhaleBefore   = Whale on the march :
 WhaleAfter    = Follow @welcomenewusers to get announcement!
-UsersBefore   = Welcome New users\n;
-UsersAfter    = \nFollow @welcomenewusers to get announcement!\nLet's become mutual followers;
+UsersBefore   = Welcome New users\n
+UsersAfter    = \nFollow @welcomenewusers to get announcement!\nLet's become mutual followers
 MaxFollBefore = Most Followed users by 24 hours\n;
-MaxFolAfter   = \nFollow @WhaleRadar and get fresh data!;
-MaxLikeBefore = \nMost Liked users by 24 hours\n;
-MaxLikeAfter  = \nFollow @WhaleRadar and get fresh data!;
+MaxFolAfter   = \nFollow @WhaleRadar and get fresh data!
+MaxLikeBefore = \nMost Liked users by 24 hours\n
+MaxLikeAfter  = \nFollow @WhaleRadar and get fresh data!
