--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -5,8 +5,13 @@ WhaleAfter    = Follow @welcomenewusers to get announcement!\n
 UsersBefore   = Welcome New users\n
 UsersAfter    = \nFollow @welcomenewusers to get announcement!\nLet's become mutual followers
 MaxFollBefore = Most Followed users by 24 hours\n;
-MaxFolAfter   = \nFollow @WhaleRadar and get fresh data!
+MaxFolAfter   = \nFollow @WhaleRadar and get fresh data!\n
 MaxLikeBefore = \nMost Liked users by 24 hours\n
-MaxLikeAfter  = \nFollow @WhaleRadar and get fresh data!
+MaxLikeAfter  = \nFollow @WhaleRadar and get fresh data!\n
 ResultInWhaleList =10
 MaxSellInBlock =\nBigest sell transaction il last blocks\n
+MaxVolumeBuyIntr=\nThis wales show us trading strategy:
+MaxVolumeBuyOutr=\nFollow @WhaleRadar and get fresh data!\n
+MaxVolumeBuyerCount=5
+MaxVolSellIntr=\nToday is a bad day for: 
+MaxVolSellOutr=\nFollow @WhaleRadar and get fresh data!\n
